# cne-ml-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
cne_ml_extractor/: __init__.py  ml_infer.py  pipeline_ml.py  utils.py
ml/: build_dataset.py  train_line_cls.py  train_ner.py
scripts/: run_infer.ps1  run_lote.ps1
tests/: test_pipeline_ml.py  test_server.py  test_utils.py  test_webapp.py
webapp/: index.html  server.py
